# MATH5030_group_project

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: demo.html  demo.ipynb
risk_parity_constrained.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
riskparity/: __init__.py  _core.py
tests/: test_riskparity.py
