[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-parity-constrained"
version = "0.1.0"
description = "Risk parity portfolio optimization with weight constraints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MATH5030 Group Project" }
]
keywords = ["finance", "portfolio", "risk parity", "optimization"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
demo = [
    "matplotlib>=3.8",
    "notebook>=7.0",
]

[project.urls]
Homepage = "https://github.com/mercuryyujia/MATH5030_group_project"
Repository = "https://github.com/mercuryyujia/MATH5030_group_project"

[tool.setuptools.packages.find]
where = ["."]
include = ["riskparity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]